# OdyssAI

./: .dockerignore  .gitignore  ACCESSING_LOGS.md  CONNECTION_FLOW.md  DATE_FLOW.md  DEBUGGING_LOGS.md  Dockerfile.backend  LOGGING.md  LOGS_SETUP_COMPLETE.md  MCP_LOGGING_ENHANCED.md  Makefile  QUICK_LOG_REFERENCE.md  REBUILD_CONTAINERS.md  SLIDEDECK_PROMPT.md  TESTING.md  backend_logs.txt  docker-compose.yml  quick_test.sh  rebuild-for-logs.sh  view-logs.sh
backend/: .dockerignore  AGENT_TESTING.md  Dockerfile  README.md  api.py  config.py  main.py  models.py  requirements.txt  test_agents.py
backend/database/: __init__.py  connection.py  models.py  schemas.py
backend/services/: __init__.py  chat_service.py  image_service.py  temperature_service.py
backend/travel_agents/: __init__.py  activities_agent.py  agent_registry.py  base_agent.py  (+8 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
mcp-servers/: README.md
python-mcp-sandbox-openai-sdk-main/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
python-mcp-sandbox-openai-sdk-main/example/: README.md  amadeus_runner.py
python-mcp-sandbox-openai-sdk-main/src/amadeus_mcp/: __init__.py  cache.py  client.py  servers_air.py  servers_content.py  servers_hotels.py  servers_transfers.py
python-mcp-sandbox-openai-sdk-main/src/mcp_sandbox_openai_sdk/: __init__.py  _utils.py  errors.py  mcp_manifest.py  mcp_servers.py  runtime_permissions.py  sandbox.py
python-mcp-sandbox-openai-sdk-main/tests/: test_parse_mcp_manifests.py
(+129 files in other folders)
